<resources>
    <string name="app_name">Shopper</string>
    <string name="onboard_body_title">Добро пожаловать в Список покупок!</string>
    <string name="onboard_body_first_line">Создавайте списки, добавляйте товары,</string>
    <string name="onboard_body_second_line">отмечайте, что уже куплено</string>
    <string name="main_title">Мои списки</string>
    <string name="main_empty_title">У вас пока нет списков</string>
    <string name="main_empty_subtitle">Нажмите на кнопку + ниже, чтобы создать \nсвой первый список</string>
    <string name="product_empty_title">В списке покупок пока пусто</string>
    <string name="product_empty_subtitle">Нажмите на кнопку + ниже, \nчтобы добавить товары</string>
    <string name="product_title">Продукты</string>
    <string name="cd_search">Поиск</string>
    <string name="cd_delete">Удалить</string>
    <string name="cd_theme">Сменить тему</string>
    <string name="cd_add">Добавить список</string>
    <string name="cd_back">Назад</string>
    <string name="cd_menu">Меню</string>
    <string name="cd_add_product">Добавить товар</string>
    <string name="add_list">Добавление списка</string>
    <string name="rename_list">Переименовывание списка</string>
    <string name="list_title">Название списка</string>
    <string name="new_list">Новый список</string>
    <string name="cancel_button_text">Отмена</string>
    <string name="create_button_text">Создать</string>
    <string name="rename_button_text">Переименовать</string>
    <string name="delete_all_lists_title">Удалить все списки?</string>
    <string name="delete_button_text">Удалить</string>
    <string name="delete_list_text">Удалить список «%s»?</string>
    <string name="search_lists_hint">Поиск списков</string>
    <string name="cd_clear">Очистить</string>
    <string name="search_not_found_title">Мы не смогли найти то, \nчто вы искали</string>
    <string name="search_not_found_subtitle">Попробуйте изменить запрос \nили проверить написание</string>
    <string name="entrance">Вход</string>
    <string name="registration">Регистрация</string>
    <string name="password">Пароль</string>
    <string name="email">"Электронная почта"</string>
    <string name="login">Войти</string>
    <string name="sign_in">Зарегистрироваться</string>
    <string name="no_account_register">Зарегистрироваться</string>
    <string name="account_exists_entrance">Уже есть аккаунт? Войти</string>
    <string name="product">Товар</string>
    <string name="add_new_product">Добавить новый товар</string>
    <string name="quantity">Количество</string>
    <string name="units">Единицы</string>
    <string name="unit_pcs">шт</string>
    <string name="unit_kg">кг</string>
    <string name="unit_l">л</string>
    <string name="unit_pack">уп</string>
    <string name="unit_g">гр</string>
    <string name="unit_ml">мл</string>
    <string name="default_quantity">1</string>
    <string name="collapse">Свернуть</string>
    <string name="extract">Развернуть</string>
    <string name="sort">Сортировка</string>
    <string name="deleteAll">Удалить все</string>
    <string name="clearBought">Очистить купленные</string>
    <string name="sortByABC">По алфавиту</string>
    <string name="sortByUserPref">Пользовательская</string>
    <string name="deleteAllConfirm">Удалить все товары?</string>
    <string name="clearBoughtConfirm">Удалить все купленные товары?</string>
    <string name="copy_list"> (Копия)</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="password_recovery">Восстановление пароля</string>
    <string name="send_recovery_email">Отправить письмо для восстановления пароля</string>
    <string name="forgot_password">Восстановить пароль</string>
    <string name="error_auth_weak_password">Пароль должен содержать минимум 6 символов</string>
    <string name="error_auth_invalid_email">Неверный формат email</string>
    <string name="error_auth_email_in_use">Пользователь с таким email уже существует</string>
    <string name="error_auth_user_not_found">Пользователь с таким email не найден</string>
    <string name="error_auth_wrong_password">Неверная электронная почта или пароль</string>
    <string name="error_auth_network_timeout">Превышено время ожидания. Проверьте подключение</string>
    <string name="error_auth_no_internet">Отсутствует подключение к интернету</string>
    <string name="error_auth_network_error">Ошибка сети</string>
    <string name="error_auth_user_creation_failed">Ошибка создания пользователя</string>
    <string name="error_auth_login_failed">Ошибка входа в систему</string>
    <string name="error_unknown">Неизвестная ошибка</string>
    <string name="error_add_product">Ошибка добавления</string>
    <string name="error_toggle_product">Ошибка изменения статуса</string>
    <string name="error_delete_product">Ошибка удаления</string>
    <string name="error_change_sorting">Ошибка изменения сортировки</string>
    <string name="error_delete_all_products">Ошибка удаления всех товаров</string>
    <string name="error_clear_bought">Ошибка очистки купленных товаров</string>
    <string name="error_network">Ошибка сети:</string>
    <string name="error_state">Ошибка состояния:</string>
    <string name="error_empty_list_name">Название не может быть пустым</string>
    <string name="error_database">Ошибка базы данных:</string>
    <string name="error_io">Ошибка ввода-вывода:</string>
    <string name="error_database_delete">Ошибка базы данных при удалении:</string>
    <string name="error_io_delete">Ошибка ввода-вывода при удалении:</string>
    <string name="error_state_delete">Ошибка состояния при удалении</string>
    <string name="error_database_update">Ошибка базы данных при обновлении:</string>
    <string name="error_io_update">Ошибка ввода-вывода при обновлении:</string>
    <string name="error_state_update">Ошибка состояния при обновлении:</string>
    <string name="error_database_general">Ошибка базы данных:</string>
    <string name="error_io_general">Ошибка ввода-вывода:</string>
    <string name="error_state_general">Ошибка состояния:</string>
    <string name="error_delete_all">Ошибка при удалении:</string>
    <string name="error_io_delete_all">Ошибка ввода-вывода:</string>
    <string name="error_state_delete_all">Ошибка состояния:</string>
    <string name="error_email_empty">Введите email</string>
    <string name="error_email_invalid">Введите корректный email</string>
    <string name="error_password_empty">Введите пароль</string>
    <string name="error_password_too_short">Пароль должен быть не менее 6 символов</string>
    <string name="recovery_success_title">Проверьте почту</string>
    <string name="recovery_success_message">Письмо для сброса пароля отправлено на</string>
    <string name="recovery_success_instruction">Перейдите по ссылке в письме, чтобы создать новый пароль.</string>
    <string name="recovery_success_button">Понятно</string>
    <string name="recovery_instruction">Введите email, указанный при регистрации. Мы отправим на него ссылку для сброса пароля.</string>
    <string name="error_passwords_mismatch">Пароли не совпадают</string>
    <string name="error_no_internet">Нет подключения к интернету. Проверьте настройки сети.</string>
    <string name="sort_by_custom">пользовательская</string>
    <string name="sort_by_alphabet">по алфавиту</string>
    <string name="delete_item_text">Удалить товар «%s»?</string>
    <string name="error_change_product">Ошибка изменения продукта: %1$s</string>
</resources>